v0.11:

o Added support for fillservers (by priority)

o Now requeueing segments to other servers when they fail yDecode CRC
  checks

o Added optional support for converting MacBinary files

o Now properly parsing v3.newzbin.com NZB names

o No longer overwriting pre-existing files during rar extraction

o Fixed a couple issues when antiIdle is disabled, including reconnection
  failures after connections are lost

o antiIdle disabled connections now avoid connecting at startup, and
  disconnect immediately when there is nothing left to download. i.e. they
  only are connected to the server when necessary. antiIdle disabled fill
  servers only connect when they have something to download. 

v0.10:

o Multiple servers are now represented with different colors in the scroller
  output

o Added the ability to run an external handler script on an archive after
  post processing

o Now including duplicate files during par2 repair

o All filename paths in the config file now expand the "~" character to the
  user's home directory

o Added support for compressed (.zip) nzbs (thanks Freddie)

o Fixed the following IOError occurring on malformed NZBs that include multiple
<segment>s of the same segment number for a particular <file> (particularly
those NZBs created by newzleech.com):

IOError: [Errno 2] No such file or directory:
'/nzb/daemon.temp/download-tmp/hellanzb-tmp-archvie.file0172.segment0001_ENC'

o Added the ability to disconnect from the usenet server when idle (set
  antiIdle = 0)

o Fixed defineServer's bindTo option

o Added the enqueueurl RPC call (downloads the NZB at the specified URL)

o Better handling of slow NZB copies to the queue directory (won't queue the
  NZB until it's fully copied)

o Rars within rars are no longer deleted by the PostProcessor in some cases

o A few misc. lockup/stability related fixes

v0.9:

NZBLeecher:

o New feature: smartpar. hellanzb will now skip downloading extra par2/par1